--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joi-validation-strategy",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Joi validation strategy for react-validation-mixin",
   "main": "./lib/joiValidationStrategy.js",
   "files": [
@@ -48,7 +48,7 @@
     "eslint-config-airbnb": "0.0.8",
     "eslint-plugin-react": "^3.3.0",
     "husky": "^0.8.1",
-    "joi": "^6.7.0",
+    "joi": "https://github.com/hapijs/joi/archive/v9.0.0-2.tar.gz",
     "karma": "^0.13.9",
     "karma-browserify": "^4.3.0",
     "karma-chrome-launcher": "^0.2.0",
@@ -58,11 +58,12 @@
     "rimraf": "^2.4.3"
   },
   "peerDependencies": {
-    "joi": ">=5.1.0"
+    "joi": "9.0.0-2"
   },
   "dependencies": {
     "he": "^0.5.0",
     "invariant": "^2.1.1",
+    "joi": "https://github.com/hapijs/joi/archive/v9.0.0-2.tar.gz",
     "lodash.compose": "^2.4.1",
     "lodash.get": "^3.7.0",
     "lodash.groupby": "^3.1.1",
